
cmake_minimum_required(VERSION 2.6)

project(expatpp)

find_package(EXPAT REQUIRED)

SET(EXPATPP_MAJOR_VERSION 0)
SET(EXPATPP_MINOR_VERSION 6)
SET(EXPATPP_BUILD_VERSION 0)
SET(EXPATPP_VERSION
  "${EXPATPP_MAJOR_VERSION}.${EXPATPP_MINOR_VERSION}.${EXPATPP_BUILD_VERSION}")
SET(EXPATPP_API_VERSION
  "${EXPATPP_MAJOR_VERSION}.${EXPATPP_MINOR_VERSION}")
SET(EXPATPP_LIBRARY_PROPERTIES ${EXPATPP_LIBRARY_PROPERTIES}
  VERSION "${EXPATPP_VERSION}"
  SOVERSION "${EXPATPP_API_VERSION}"
)


add_subdirectory(lib)
add_subdirectory(test)

INCLUDE(CPack)
